...
            "state" : "translated",
            "value" : "Add expense"
          }
        }
      }
    },
    "Adicionar despesa avulsa" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add one-off expense"
          }
...
            "state" : "translated",
            "value" : "Calendar"
          }
        }
      }
    },
    "Cancelar" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
...
            "state" : "translated",
            "value" : "Meal/food card"
          }
        }
      }
    },
    "Categoria" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Category"
          }
...
            "state" : "translated",
            "value" : "Recurring expense"
          }
        }
      }
    },
    "Despesas avulsas" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "One-off expenses"
          }
...
